<resources>
    <string name="app_name">My Story</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="i_accept_terms">I accept terms and conditions</string>
    <string name="forgot_password">Forgot Password </string>
    <string name="home">Home </string>
    <string name="logout"> Logout </string>
    <string name="open"> Open </string>
    <string name="close"> Close </string>
    <string name="enter_title"> Enter Title Her  </string>
    <string name="enter_sub_title"> Enter Title Sub Her  </string>
    <string name="enter_description"> Enter Title Description Her  </string>
    <string name="add_story"> Add Story   </string>





</resources>